--- a/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Perdas.fx.yaml
@@ -21,7 +21,14 @@
         AccessibleLabel: =Self.Tooltip
         Height: =88
         Icon: =Icon.Reload
-        OnSelect: =Refresh([@LancamentoProducao])
+        OnSelect: |-
+            =Refresh([@LancamentoPerdas]);
+            
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas >= 1));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            UpdateContext({IdEspelhoatualPerdas: 0});
+            
+            Select(btn_collperd_perd)
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
@@ -324,4 +331,201 @@
         Width: =80
         X: =253
         ZIndex: =15
+
+    btn_collperd_perd As button:
+        Height: =70
+        OnSelect: |+
+            =UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+            UpdateContext({IdEspelhoatualPerdas: maiorIdEspelhoPerdas});
+            ClearCollect(Listaperdas,Filter(LancamentoPerdas,IdEspelhoPerdas > maiorIdEspelhoPerdas));
+            UpdateContext({maiorIdEspelhoPerdas: Max(Listaperdas,IdEspelhoPerdas)});
+            
+        Size: =24
+        Text: ="Botão"
+        Visible: =false
+        Width: =280
+        ZIndex: =16
 
